packages/optimizer/core/src/snapshots/qwik_core__test__captured_props_as_jsx_tags_inline.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';
import { Fallback, fallback, render } from './x';

export const Cmp = component$(
	({
		Model = Fallback,
		Layout,
		ui = fallback,
		icons,
		'my-icon': Icon,
	}: {
		Model?: any;
		Layout: any;
		ui?: any;
		icons: any;
		'my-icon': any;
	}) => {
		const view = $(() =>
			render(
				<Layout>
					<Model />
					<ui.Home />
					<icons.Star />
					<Icon />
				</Layout>
			)
		);
		return <button onClick$={view} />;
	}
);

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _capturesObj } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { Fallback, fallback, render } from './x';
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ _noopQrl("Cmp_component_4ryKJTOKjWE");
const q_Cmp_component_view_ITAz7Hgj10g = /*#__PURE__*/ _noopQrl("Cmp_component_view_ITAz7Hgj10g");
//
q_Cmp_component_view_ITAz7Hgj10g.s(()=>{
    let _rawProps = _capturesObj._[0];
    return render(/*#__PURE__*/ _jsxSorted(_rawProps.Layout, null, null, [
        /*#__PURE__*/ _jsxSorted(_rawProps.Model ?? Fallback, null, null, null, 3, "u6_0"),
        /*#__PURE__*/ _jsxSorted((_rawProps.ui ?? fallback).Home, null, null, null, 3, "u6_1"),
        /*#__PURE__*/ _jsxSorted(_rawProps.icons.Star, null, null, null, 3, "u6_2"),
        /*#__PURE__*/ _jsxSorted(_rawProps["my-icon"], null, null, null, 3, "u6_3")
    ], 1, "u6_4"));
});
q_Cmp_component_4ryKJTOKjWE.s((_rawProps)=>{
    const view = q_Cmp_component_view_ITAz7Hgj10g.w([
        _rawProps
    ]);
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "q-e:click": view
    }, null, 3, "u6_5");
});
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAEA,SAAS,QAAQ,EAAE,QAAQ,EAAE,MAAM,QAAQ,MAAM;;;;;mCAgBhC;;WACd,qBACC,qBAbF;sBAcG,qBAfH,SAAQ;sBAgBL,WAAC,WAdJ,MAAK,UAcE,IAAI;sBACR,WAAC,UAdJ,MAcU,IAAI;sBACX;;;8BAnBJ;IAaC,MAAM;;;IAUN,qBAAO,WAAC;QAAO,aAAU;;AAC1B;AAzBD,OAAO,MAAM,oBAAM,0CA0BjB\"}")
== DIAGNOSTICS ==

[]
