packages/optimizer/core/src/snapshots/qwik_core__test__captured_props_shadowed_in_segment.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';
import { Fallback, render } from './x';

export const Cmp = component$(({ Model = Fallback }: { Model?: any }) => {
	return <button onClick$={() => render(Model, [1].map((Model) => Model))} />;
});

export const Cmp2 = component$(({ Model }: { Model: any }) => {
	return <button onClick$={() => render(<Model />, [1].map((Model) => <Model />))} />;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp2_component_FnOz26iMYaM = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp2_component_FnOz26iMYaM"), "Cmp2_component_FnOz26iMYaM");
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);
export const Cmp2 = /*#__PURE__*/ componentQrl(q_Cmp2_component_FnOz26iMYaM);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AAIA,OAAO,MAAM,oBAAM,0CAEhB;AAEH,OAAO,MAAM,qBAAO,2CAEjB\"}")
============================= test.tsx_Cmp_component_button_q_e_click_0O0tA6ahzDQ.js (ENTRY POINT)==

import { Fallback } from "./x";
import { render } from "./x";
//
export const Cmp_component_button_q_e_click_0O0tA6ahzDQ = (_, _1, _rawProps)=>render(_rawProps.Model ?? Fallback, [
        1
    ].map((Model)=>Model));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;0DAK0B,oBAAM,iBADC,SAAQ,UACK;QAAC;KAAE,CAAC,GAAG,CAAC,CAAC,QAAU\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_button_q_e_click_0O0tA6ahzDQ",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_button_q_e_click",
  "hash": "0O0tA6ahzDQ",
  "canonicalFilename": "test.tsx_Cmp_component_button_q_e_click_0O0tA6ahzDQ",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    189,
    235
  ],
  "paramNames": [
    "_",
    "_1",
    "_rawProps"
  ]
}
*/
============================= test.tsx_Cmp2_component_button_q_e_click_lRw2YGQT0z8.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { render } from "./x";
//
export const Cmp2_component_button_q_e_click_lRw2YGQT0z8 = (_, _1, _rawProps)=>render(/*#__PURE__*/ _jsxSorted(_rawProps.Model, null, null, null, 3, "u6_1"), [
        1
    ].map((Model)=>/*#__PURE__*/ _jsxSorted(Model, null, null, null, 3, "u6_2")));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;2DAS0B,oBAAM,qBAAO,qBADL,qCACgB;QAAC;KAAE,CAAC,GAAG,CAAC,CAAC,sBAAU,WAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp2_component_button_q_e_click_lRw2YGQT0z8",
  "entry": null,
  "displayName": "test.tsx_Cmp2_component_button_q_e_click",
  "hash": "lRw2YGQT0z8",
  "canonicalFilename": "test.tsx_Cmp2_component_button_q_e_click_lRw2YGQT0z8",
  "path": "",
  "extension": "js",
  "parent": "Cmp2_component_FnOz26iMYaM",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    336,
    390
  ],
  "paramNames": [
    "_",
    "_1",
    "_rawProps"
  ]
}
*/
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_button_q_e_click_0O0tA6ahzDQ = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_button_q_e_click_0O0tA6ahzDQ"), "Cmp_component_button_q_e_click_0O0tA6ahzDQ").m();
//
export const Cmp_component_4ryKJTOKjWE = (_rawProps)=>{
    return /*#__PURE__*/ _jsxSorted("button", {
        "q-e:click": q_Cmp_component_button_q_e_click_0O0tA6ahzDQ,
        "q:p": _rawProps
    }, null, null, 6, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;yCAI8B;IAC7B,qBAAO,WAAC;QAAO,WAAQ;;;AACxB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    118,
    242
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
============================= test.tsx_Cmp2_component_FnOz26iMYaM.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp2_component_button_q_e_click_lRw2YGQT0z8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp2_component_button_q_e_click_lRw2YGQT0z8"), "Cmp2_component_button_q_e_click_lRw2YGQT0z8").m();
//
export const Cmp2_component_FnOz26iMYaM = (_rawProps)=>{
    return /*#__PURE__*/ _jsxSorted("button", {
        "q-e:click": q_Cmp2_component_button_q_e_click_lRw2YGQT0z8,
        "q:p": _rawProps
    }, null, null, 6, "u6_3");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;0CAQ+B;IAC9B,qBAAO,WAAC;QAAO,WAAQ;;;AACxB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp2_component_FnOz26iMYaM",
  "entry": null,
  "displayName": "test.tsx_Cmp2_component",
  "hash": "FnOz26iMYaM",
  "canonicalFilename": "test.tsx_Cmp2_component_FnOz26iMYaM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    277,
    397
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==

[]
