packages/optimizer/core/src/snapshots/qwik_core__test__component_level_self_referential_qrl.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 6601
expression: output
---
==INPUT==


import { component$, useComputed$ } from '@qwik.dev/core';
		
// Component-level self-referential component
export const Foo = component$((props) => {
	const sig = useComputed$(async ({cleanup}) => {
		const timer = setInterval(() => {
			sig.value++;
		}, 1000);
		cleanup(() => clearInterval(timer));
		return 0;
	});
	const other = useComputed$(async ({cleanup}) => {
		const timer = setInterval(() => {
			other.value++;
		}, 900);
		cleanup(() => clearInterval(timer));
		return 0;
	});
	return (
		<div>
			{other.value}
		</div>
	);
});

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
//
const q_Foo_component_other_useComputed_0QD9afRmVdw = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_other_useComputed_0QD9afRmVdw"), "Foo_component_other_useComputed_0QD9afRmVdw");
const q_Foo_component_sig_useComputed_fzAkWUZNfME = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_sig_useComputed_fzAkWUZNfME"), "Foo_component_sig_useComputed_fzAkWUZNfME");
//
export const Foo_component_HTDRsvUbLiE = (props)=>{
    const _ref = {};
    _ref.sig = useComputedQrl(q_Foo_component_sig_useComputed_fzAkWUZNfME.w([
        _ref.sig
    ]));
    const { sig } = _ref;
    _ref.other = useComputedQrl(q_Foo_component_other_useComputed_0QD9afRmVdw.w([
        _ref.other
    ]));
    const { other } = _ref;
    return <div>
			{other.value}
		</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;yCAI8B,CAAC;IAC9B;eAAY;;;IAAZ,QAAM;iBAOQ;;;IAAd,QAAM;IAON,QACE,IAAI;GACJ,CAAC,MAAM,KAAK,CAAC;EACd,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    140,
    543
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Foo_component_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE");
// Component-level self-referential component
//
export const Foo = /*#__PURE__*/ componentQrl(q_Foo_component_HTDRsvUbLiE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAGA,6CAA6C;;AAC7C,OAAO,MAAM,oBAAM,0CAoBhB\"}")
============================= test.tsx_Foo_component_sig_useComputed_fzAkWUZNfME.tsx (ENTRY POINT)==

import { _capturesObj } from "@qwik.dev/core";
//
export const Foo_component_sig_useComputed_fzAkWUZNfME = async (_rawProps)=>{
    let sig = _capturesObj._[0];
    const timer = setInterval(()=>{
        sig.value++;
    }, 1000);
    _rawProps.cleanup(()=>clearInterval(timer));
    return 0;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yDAK0B;;IACxB,MAAM,QAAQ,YAAY;QACzB,IAAI,KAAK;IACV,GAAG;IACH,UAJgC,QAIxB,IAAM,cAAc;IAC5B,OAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_sig_useComputed_fzAkWUZNfME",
  "entry": null,
  "displayName": "test.tsx_Foo_component_sig_useComputed",
  "hash": "fzAkWUZNfME",
  "canonicalFilename": "test.tsx_Foo_component_sig_useComputed_fzAkWUZNfME",
  "path": "",
  "extension": "tsx",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": true,
  "loc": [
    179,
    319
  ],
  "paramNames": [
    "_rawProps"
  ],
  "captureNames": [
    "sig"
  ]
}
*/
============================= test.tsx_Foo_component_other_useComputed_0QD9afRmVdw.tsx (ENTRY POINT)==

import { _capturesObj } from "@qwik.dev/core";
//
export const Foo_component_other_useComputed_0QD9afRmVdw = async (_rawProps)=>{
    let other = _capturesObj._[0];
    const timer = setInterval(()=>{
        other.value++;
    }, 900);
    _rawProps.cleanup(()=>clearInterval(timer));
    return 0;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;2DAY4B;;IAC1B,MAAM,QAAQ,YAAY;QACzB,MAAM,KAAK;IACZ,GAAG;IACH,UAJkC,QAI1B,IAAM,cAAc;IAC5B,OAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_other_useComputed_0QD9afRmVdw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_other_useComputed",
  "hash": "0QD9afRmVdw",
  "canonicalFilename": "test.tsx_Foo_component_other_useComputed_0QD9afRmVdw",
  "path": "",
  "extension": "tsx",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": true,
  "loc": [
    350,
    491
  ],
  "paramNames": [
    "_rawProps"
  ],
  "captureNames": [
    "other"
  ]
}
*/
== DIAGNOSTICS ==

[]
