packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_colon_props.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 3714
expression: output
---
==INPUT==


		import { component$ } from "@qwik.dev/core";
		export default component$((props) => {
			const { 'bind:value': bindValue } = props;
			return (
				<>
				{bindValue}
				</>
			);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEE,6BAAe,2CAOZ\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const test_component_LUXeXe0DQrg = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, _wrapProp(props, "bind:value"), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;0CAE4B,CAAC;IAE1B,qBACC,4CAFmC;AAMrC\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    77,
    188
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
