packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_helper_reassigns_for_in.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		export const buildHead = ({ ogImage }: { ogImage?: string }) => {
			for (ogImage in { "fallback-image-url": 1 }) {}
			return { meta: [{ property: "og:image", content: ogImage }] };
		};
		
============================= test.js ==

export const buildHead = ({ ogImage })=>{
    for(ogImage in {
        "fallback-image-url": 1
    });
    return {
        meta: [
            {
                property: "og:image",
                content: ogImage
            }
        ]
    };
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACE,OAAO,MAAM,YAAY,CAAC,EAAE,OAAO,EAAwB;IAC1D,IAAK,WAAW;QAAE,sBAAsB;IAAE;IAC1C,OAAO;QAAE,MAAM;YAAC;gBAAE,UAAU;gBAAY,SAAS;YAAQ;SAAE;IAAC;AAC7D,EAAE\"}")
== DIAGNOSTICS ==

[]
